# Gastos-Deputados-Brasil-IO

./: .gitignore  README.md  brasil_io.py  pyproject.toml  test.ipynb
.github/: pull_request_template.md
.github/workflows/: main.yml
databricks/: executor_notebook.py  job_definition.json
databricks/jobs/: ingest_raw.py  ingest_silver.py
databricks/jobs/utils/: functions.py  paths.py
databricks/utils/: functions.py
github_actions/: deploy_databricks_assets.sh
notebooks/: validations_and_tests_notebook.ipynb
scripts/: brasil_io.py  config.py  ingest_csv_to_s3.py  ingest_s3_to_delta.py
